# MinTrack

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  run-bot.yml
existing_scripts/: __init__.py  monitoreotitulo.py
mintrack/: bot.py  centinela.py  cli.py  client.py  db.py  geo.py  menu.py  models.py  servicios.py
tests/: test_anna_integration.py  test_servicios.py
